<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/resultEdit"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/buttonRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/btn07"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/btn08"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/btn09"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/btnAdd"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/btn04"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/btn05"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/btn06"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/btnMinus"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/btn01"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/btn02"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/btn03"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/btnDivide"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/btnClear"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/btn00"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/btnDot"
                android:textSize="48sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/btnMultiply"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnResultClick"
            android:text="@string/btnResult"
            android:textSize="48sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>